ref: create, change, update episodes. feat: add base route whis swagger
