# src/Controller/Api/LocationController.php
@@ -4,15 +4,26 @@ namespace App\Controller\Api;
 
 use App\Contracts\Managers\Validation\ValidateManagerInterface;
 use App\Contracts\Repositories\Location\LocationRepositoryInterface;
+use App\DTO\In\Character\ChangeCharacterDto;
+use App\DTO\In\Character\CreateCharacterDto;
+use App\DTO\In\Character\UpdateCharacterDto;
+use App\DTO\In\Location\ChangeLocationDto;
+use App\DTO\In\Location\CreateLocationDto;
+use App\DTO\In\Location\UpdateLocationDto;
+use App\DTO\Out\Character\CharacterDto;
+use App\DTO\Out\Location\LocationDto;
+use App\DTO\Paginate\PaginateInfoDto;
 use App\Exceptions\Validation\ValidateException;
 use App\Utils\Mappers\In\Location\ChangeLocationDtoMapper;
 use App\Utils\Mappers\In\Location\CreateLocationDtoMapper;
 use App\Utils\Mappers\In\Location\GetLocationsDtoMapper;
 use App\Utils\Mappers\In\Location\UpdateLocationDtoMapper;
+use Nelmio\ApiDocBundle\Annotation\Model;
 use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
 use Symfony\Component\HttpFoundation\JsonResponse;
 use Symfony\Component\HttpFoundation\Request;
 use Symfony\Component\Routing\Attribute\Route;
+use OpenApi\Attributes as OA;
 
 #[Route('/location', name: 'location_')]
 class LocationController extends AbstractController
@@ -26,7 +37,63 @@ class LocationController extends AbstractController
      * @param Request $request
      * @return JsonResponse
      */
-    #[Route('/', name: "get", methods: ['GET'])]
+    #[Route(name: "get", methods: ['GET'])]
+    #[OA\Tag(name: 'Locations')]
+    #[OA\Parameter(
+        name: 'ids',
+        in: 'query',
+        schema: new OA\Schema(type: 'array[number]')
+    )]
+    #[OA\Parameter(
+        name: 'page',
+        in: 'query',
+        schema: new OA\Schema(type: 'number')
+    )]
+    #[OA\Parameter(
+        name: 'name',
+        in: 'query',
+        schema: new OA\Schema(type: 'string')
+    )]
+    #[OA\Parameter(
+        name: 'type',
+        in: 'query',
+        schema: new OA\Schema(type: 'string')
+    )]
+    #[OA\Parameter(
+        name: 'dimension',
+        in: 'query',
+        schema: new OA\Schema(type: 'string')
+    )]
+    #[OA\Response(
+        response: 200,
+        description: 'OK',
+        content: new OA\JsonContent(
+            properties: [
+                new OA\Property(
+                    property: 'info',
+                    ref: new Model(type: PaginateInfoDto::class),
+                ),
+                new OA\Property(
+                    property: 'results',
+                    type: 'array',
+                    items: new OA\Items(ref: new Model(type: LocationDto::class)),
+                ),
+            ],
+            type: 'object')
+    )]
+    #[OA\Response(
+        response: 400,
+        description: 'Invalid data',
+        content: new OA\JsonContent(
+            properties: [
+                new OA\Property(
+                    property: 'name',
+                    type: 'string',
+                    example: 'Object(App\\DTO\\In\\Episode\\GetEpisodesDto).filters.code: This value is not valid.'
+                ),
+            ],
+            type: 'object')
+    )]
     public function getMany(Request $request): JsonResponse
     {
         $getLocationsDto = GetLocationsDtoMapper::fromRequest($request);
@@ -46,6 +113,17 @@ class LocationController extends AbstractController
      * @return JsonResponse
      */
     #[Route('/{id}', name: "index", methods: ['GET'])]
+    #[OA\Tag(name: 'Locations')]
+    #[OA\Parameter(
+        name: 'id',
+        in: 'path',
+        schema: new OA\Schema(type: 'number')
+    )]
+    #[OA\Response(
+        response: 200,
+        description: 'OK',
+        content: new Model(type: CharacterDto::class),
+    )]
     public function getById(int $id): JsonResponse
     {
         return new JsonResponse($this->locationRepository->findById($id));
@@ -55,7 +133,17 @@ class LocationController extends AbstractController
      * @param int $id
      * @return JsonResponse
      */
-    #[Route('/location/{id}', methods: ['DELETE'])]
+    #[Route('/{id}', methods: ['DELETE'])]
+    #[OA\Tag(name: 'Locations')]
+    #[OA\Parameter(
+        name: 'id',
+        in: 'path',
+        schema: new OA\Schema(type: 'number')
+    )]
+    #[OA\Response(
+        response: 200,
+        description: 'OK',
+    )]
     public function delete(int $id): JsonResponse
     {
         $this->locationRepository->delete($id);
@@ -67,7 +155,31 @@ class LocationController extends AbstractController
      * @param Request $request
      * @return JsonResponse
      */
-    #[Route('/', methods: ['POST'])]
+    #[Route(methods: ['POST'])]
+    #[OA\Tag(name: 'Locations')]
+    #[OA\RequestBody(
+        content: new OA\JsonContent(
+            ref: new Model(type: CreateLocationDto::class)
+        )
+    )]
+    #[OA\Response(
+        response: 200,
+        description: 'OK',
+        content: new Model(type: LocationDto::class),
+    )]
+    #[OA\Response(
+        response: 400,
+        description: 'Invalid data',
+        content: new OA\JsonContent(
+            properties: [
+                new OA\Property(
+                    property: 'name',
+                    type: 'string',
+                    example: 'Object(App\\DTO\\In\\Episode\\GetEpisodesDto).filters.code: This value is not valid.'
+                ),
+            ],
+            type: 'object')
+    )]
     public function create(Request $request): JsonResponse
     {
         $createLocationDto = CreateLocationDtoMapper::fromRequest($request);
@@ -87,6 +199,30 @@ class LocationController extends AbstractController
      * @return JsonResponse
      */
     #[Route('/{id}', methods: ['PATCH'])]
+    #[OA\Tag(name: 'Locations')]
+    #[OA\RequestBody(
+        content: new OA\JsonContent(
+            ref: new Model(type: ChangeLocationDto::class)
+        )
+    )]
+    #[OA\Response(
+        response: 200,
+        description: 'OK',
+        content: new Model(type: LocationDto::class),
+    )]
+    #[OA\Response(
+        response: 400,
+        description: 'Invalid data',
+        content: new OA\JsonContent(
+            properties: [
+                new OA\Property(
+                    property: 'name',
+                    type: 'string',
+                    example: 'Object(App\\DTO\\In\\Episode\\GetEpisodesDto).filters.code: This value is not valid.'
+                ),
+            ],
+            type: 'object')
+    )]
     public function change(Request $request): JsonResponse
     {
         $changeLocationDto = ChangeLocationDtoMapper::fromRequest($request);
@@ -102,6 +238,30 @@ class LocationController extends AbstractController
     }
 
     #[Route('/{id}', methods: ['PUT'])]
+    #[OA\Tag(name: 'Locations')]
+    #[OA\RequestBody(
+        content: new OA\JsonContent(
+            ref: new Model(type: UpdateLocationDto::class)
+        )
+    )]
+    #[OA\Response(
+        response: 200,
+        description: 'OK',
+        content: new Model(type: LocationDto::class),
+    )]
+    #[OA\Response(
+        response: 400,
+        description: 'Invalid data',
+        content: new OA\JsonContent(
+            properties: [
+                new OA\Property(
+                    property: 'name',
+                    type: 'string',
+                    example: 'Object(App\\DTO\\In\\Episode\\GetEpisodesDto).filters.code: This value is not valid.'
+                ),
+            ],
+            type: 'object')
+    )]
     public function update(Request $request): JsonResponse
     {
         $updateLocationDto = UpdateLocationDtoMapper::fromRequest($request);
